--- a/resources/views/includes/app_navigation.edge
+++ b/resources/views/includes/app_navigation.edge
@@ -6,12 +6,12 @@
               class="nk-menu-text">Packages</span></a></li>
   <li class="nk-menu-item"><a href="{{ route('app.withdrawals.index') }}" class="nk-menu-link"><span
               class="nk-menu-text">Withdrawals</span></a></li>
-  <!-- <li class="nk-menu-item"><a href="{{ route('app.announcements.index') }}" class="nk-menu-link"><span
+  <li class="nk-menu-item"><a href="{{ route('app.announcements.index') }}" class="nk-menu-link"><span
               class="nk-menu-text">Announcements
               @if(announcementCount && announcementCount > 0)
               <span class="badge badge-primary badge-pill float-right"> {{ announcementCount }}</span>
               @endif
-            </span></a></li> -->
+            </span></a></li>
   <li class="nk-menu-item has-sub"><a href="#" class="nk-menu-link nk-menu-toggle"><span
               class="nk-menu-text">Pages</span></a>
       <ul class="nk-menu-sub">
