--- a/resources/views/templates/main.edge
+++ b/resources/views/templates/main.edge
@@ -12,8 +12,8 @@
     </title>
     <link rel="stylesheet" href="/assets/css/dashlite.css?ver=1.1.0">
     <link rel="stylesheet" href="/assets/css/app.theme.css?ver=1.1.0">
+    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
   <link href="/assets/css/whatsapp.css" rel="stylesheet" type="text/css">
-
 </head>
 
 <body class="nk-body bg-lighter npc-invest ">
@@ -47,82 +47,6 @@
                         </div>
                         <div class="nk-header-tools">
                             <ul class="nk-quick-nav">
-                                <li class="dropdown notification-dropdown"><a href="#"
-                                        class="dropdown-toggle nk-quick-nav-icon" data-toggle="dropdown">
-                                        <div class="icon-status icon-status-info"><em class="icon ni ni-bell"></em>
-                                        </div>
-                                    </a>
-                                    <div class="dropdown-menu dropdown-menu-xl dropdown-menu-right dropdown-menu-s1">
-                                        <div class="dropdown-head"><span
-                                                class="sub-title nk-dropdown-title">Notifications</span><a href="#">Mark
-                                                All as Read</a></div>
-                                        <div class="dropdown-body">
-                                            <div class="nk-notification">
-                                                <div class="nk-notification-item dropdown-inner">
-                                                    <div class="nk-notification-icon"><em
-                                                            class="icon icon-circle bg-warning-dim ni ni-curve-down-right"></em>
-                                                    </div>
-                                                    <div class="nk-notification-content">
-                                                        <div class="nk-notification-text">You have requested to
-                                                            <span>Widthdrawl</span></div>
-                                                        <div class="nk-notification-time">2 hrs ago</div>
-                                                    </div>
-                                                </div>
-                                                <div class="nk-notification-item dropdown-inner">
-                                                    <div class="nk-notification-icon"><em
-                                                            class="icon icon-circle bg-success-dim ni ni-curve-down-left"></em>
-                                                    </div>
-                                                    <div class="nk-notification-content">
-                                                        <div class="nk-notification-text">Your <span>Deposit
-                                                                Order</span> is placed</div>
-                                                        <div class="nk-notification-time">2 hrs ago</div>
-                                                    </div>
-                                                </div>
-                                                <div class="nk-notification-item dropdown-inner">
-                                                    <div class="nk-notification-icon"><em
-                                                            class="icon icon-circle bg-warning-dim ni ni-curve-down-right"></em>
-                                                    </div>
-                                                    <div class="nk-notification-content">
-                                                        <div class="nk-notification-text">You have requested to
-                                                            <span>Widthdrawl</span></div>
-                                                        <div class="nk-notification-time">2 hrs ago</div>
-                                                    </div>
-                                                </div>
-                                                <div class="nk-notification-item dropdown-inner">
-                                                    <div class="nk-notification-icon"><em
-                                                            class="icon icon-circle bg-success-dim ni ni-curve-down-left"></em>
-                                                    </div>
-                                                    <div class="nk-notification-content">
-                                                        <div class="nk-notification-text">Your <span>Deposit
-                                                                Order</span> is placed</div>
-                                                        <div class="nk-notification-time">2 hrs ago</div>
-                                                    </div>
-                                                </div>
-                                                <div class="nk-notification-item dropdown-inner">
-                                                    <div class="nk-notification-icon"><em
-                                                            class="icon icon-circle bg-warning-dim ni ni-curve-down-right"></em>
-                                                    </div>
-                                                    <div class="nk-notification-content">
-                                                        <div class="nk-notification-text">You have requested to
-                                                            <span>Widthdrawl</span></div>
-                                                        <div class="nk-notification-time">2 hrs ago</div>
-                                                    </div>
-                                                </div>
-                                                <div class="nk-notification-item dropdown-inner">
-                                                    <div class="nk-notification-icon"><em
-                                                            class="icon icon-circle bg-success-dim ni ni-curve-down-left"></em>
-                                                    </div>
-                                                    <div class="nk-notification-content">
-                                                        <div class="nk-notification-text">Your <span>Deposit
-                                                                Order</span> is placed</div>
-                                                        <div class="nk-notification-time">2 hrs ago</div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="dropdown-foot center"><a href="#">View All</a></div>
-                                    </div>
-                                </li>
                                 <li class="dropdown user-dropdown order-sm-first"><a href="#" class="dropdown-toggle"
                                         data-toggle="dropdown">
                                         <div class="user-toggle">
@@ -214,7 +138,8 @@
     @endif
   @!section('scripts')
     <script src="/assets/js/custom.js"></script>
-
+    {{--  <script src="/assets/js/bundle.min.js"></script>  --}}
+    {{--  <script src="/assets/js/scripts.js"></script>  --}}
 </body>
 
 </html>
