--- a/resources/views/app/packages/show.edge
+++ b/resources/views/app/packages/show.edge
@@ -36,13 +36,13 @@
 
           <div class="t-row">
                 <p class="font-weight-bold mb-2 d-inline-block">Interest Duration</p>
-                <p>{{ package.plan.duration }} months</p>
+                <p>{{ package.plan.duration }} years</p>
             </div>
             </div>
 
           <div class="t-row">
-              <p class="font-weight-bold mb-2 d-inline-block">Rate</p>
-              <p>{{ package.plan.interest }}%</p>
+              <p class="font-weight-bold mb-2 d-inline-block">Annum Return</p>
+              <p>{{ package.plan.annum_return }}%</p>
             </div>
 
           <div class="t-row">
