--- a/resources/views/app/packages/index.edge
+++ b/resources/views/app/packages/index.edge
@@ -22,7 +22,7 @@ Packages
                 <div class="card-body">
                     <div class="d-flex justify-content-between pb-2">
                     <h5 class="m0">{{{ moneyFormat(package.plan.capital) }}}</h5>
-                    <i> {{ package.plan.interest }}%</i>
+                    <i> {{ package.plan.annum_return }}/annum</i>
                     </div>
                     <div class="d-flex justify-content-between">
                     <p class="text-muted"><span class="btn btn-sm btn-{{ package.fullStatus.class }}">{{ package.fullStatus.label }}</span></p>
