--- a/resources/views/crud/index.edge
+++ b/resources/views/crud/index.edge
@@ -77,7 +77,7 @@
                     @elseif(indexAble.type == 'date')
                      {{ formatTime(lodash($parent.data, indexAble.value) ) }}
                      @elseif(indexAble.type == 'days')
-                     {{ lodash($parent.data, indexAble.value) }} months
+                     {{ lodash($parent.data, indexAble.value) }} years
                      @elseif(indexAble.type == 'rate')
                      {{ lodash($parent.data, indexAble.value) }} %
                     @elseif(indexAble.type == 'money')
