--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -1,72 +1,3 @@
-.card {
-  margin-top: 20px;
-}
-
-.mr10 {
-  margin-right: 10px;
-}
-
-.btn {
-  padding: 8px;
-}
-
-.form-group span, span.validation {
-  color: red;
-  font-size: 12px;
-}
-
-.form-inline {
-  display: inline;
-}
-.btn-default{
-    border: 1px solid #7a6fbe;
-}
-.card{
-  padding: 20px;
-}
-a{
-    color: #7a6fbe;
-}
-button[type=submit]{
-  float: right;
-}
-.mb0{
-  margin-bottom: 0px;
-}
-.choose-package a{
-  color: #fff;
-}
-.choose-package{
-  text-align: center;
-  cursor: pointer;
-}
-
-.cursor{
-  cursor: pointer;
-}
-
-.choose-package:hover{
-  opacity: 0.9;
-}
-.choose-package .btn{
-  border:1px solid#fff;
-  color: #fff;
-}
-.choose-package.picked{
-  border: 2px solid #000;
-}
-.choose-payment.picked{
-  border: 1px solid #000;
-}
-
-.mt20{
-  margin-top: 20px; 
-}
-.m0{
-  margin: 0px;
-}
-
-.referral_link{
-  font-size: 12px;
-  float: right;
+.hidden {
+  display: none;
 }
