--- a/resources/views/includes/admin_navigation.edge
+++ b/resources/views/includes/admin_navigation.edge
@@ -1,32 +1,104 @@
-  <ul class="nk-menu nk-menu-main">
-    <li class="nk-menu-item"><a href="{{ route('admin.dashboard') }}" class="nk-menu-link"><span  class="nk-menu-text">Dashboard</span></a></li>
-    <li class="nk-menu-item"><a href="{{ route('admin.projects.index') }}" class="nk-menu-link"><span  class="nk-menu-text">Projects</span></a></li>
-    <li class="nk-menu-item"><a href="{{ route('admin.packages.index') }}" class="nk-menu-link"><span  class="nk-menu-text">Packages</span></a></li>
-    <li class="nk-menu-item"><a href="{{ route('admin.supports.index') }}" class="nk-menu-link">
-      <span  class="nk-menu-text">Support</span>
+  <ul class="nk-menu">
+    <li class="nk-menu-item">
+      <a href="{{ route('admin.dashboard') }}" class="nk-menu-link">
+          <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+          <span class="nk-menu-text">Dashboard</span>
+      </a>
+  </li>
+  <li class="nk-menu-item">
+    <a href="{{ route('admin.projects.index') }}" class="nk-menu-link">
+        <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+        <span class="nk-menu-text">Projects</span>
+    </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('admin.packages.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Packages</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('admin.supports.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Support </span>
       @if(supportCount && supportCount > 0)
       <span class="badge badge-primary badge-pill float-right"> {{ supportCount }}</span>
       @endif
-    </a></li>
-    <li class="nk-menu-item"><a href="{{ route('admin.withdrawals.index') }}" class="nk-menu-link">
-      <span  class="nk-menu-text">Withdrawals</span>
-      @if(withdrawalsCount && withdrawalsCount > 0)
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('admin.withdrawals.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Withdrawals </span>
+        @if(withdrawalsCount && withdrawalsCount > 0)
       <span class="badge badge-primary badge-pill float-right"> {{ withdrawalsCount }}</span>
       @endif
-    </a></li>
-    <li class="nk-menu-item has-sub"><a href="#"  class="nk-menu-link nk-menu-toggle"><span class="nk-menu-text">Pages</span></a>
-        <ul class="nk-menu-sub">
-          <li class="nk-menu-item"><a href="{{ route('admin.deposits.index') }}" class="nk-menu-link"><span  class="nk-menu-text">Deposits</span></a></li>
-          <li class="nk-menu-item"><a href="{{ route('admin.users.index') }}" class="nk-menu-link"><span  class="nk-menu-text">Users</span></a></li>
-          <li class="nk-menu-item"><a href="{{ route('admin.payments.index') }}" class="nk-menu-link"><span class="nk-menu-text"> Payments</span></a></li>
-          <li class="nk-menu-item"><a href="{{ route('admin.announcements.index') }}" class="nk-menu-link"><span class="nk-menu-text"> Announcements</span></a></li>
-          <li class="nk-menu-item"><a href="{{ route('admin.transactions.index') }}" class="nk-menu-link"><span class="nk-menu-text"> Transactions</span></a></li>
-          <li class="nk-menu-item"><a href="{{ route('admin.testimonials.index') }}" class="nk-menu-link"><span class="nk-menu-text"> Testimonials</span></a></li>
-          <li class="nk-menu-item"><a href="{{ route('admin.faqs.index') }}" class="nk-menu-link"><span class="nk-menu-text"> FAQs</span></a></li>
-          <li class="nk-menu-item"><a href="{{ route('admin.referrals.index') }}" class="nk-menu-link"><span class="nk-menu-text"> Referrals</span></a></li>
-          <li class="nk-menu-item"><a href="{{ route('admin.references.index') }}" class="nk-menu-link"><span class="nk-menu-text"> References</span></a></li>
-          <li class="nk-menu-item"><a href="{{ route('admin.banks.index') }}" class="nk-menu-link"><span class="nk-menu-text"> Bank</span></a></li>
-          <li class="nk-menu-item"><a href="{{ route('admin.bankoptions.index') }}" class="nk-menu-link"><span class="nk-menu-text"> Bank Options</span></a></li>
-        </ul>
-    </li>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('admin.deposits.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Deposits</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('admin.users.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Users</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('admin.payments.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Payments</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('admin.announcements.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Announcements</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('admin.transactions.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Transactions</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('admin.testimonials.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Testimonials</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('admin.faqs.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">FAQs</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('admin.referrals.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Referrals</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('admin.references.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">References</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('admin.banks.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Bank</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('admin.bankoptions.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Bank Options</span>
+  </a>
+</li>
   </ul>
