--- a/resources/views/includes/app_navigation.edge
+++ b/resources/views/includes/app_navigation.edge
@@ -1,32 +1,59 @@
-
-<ul class="nk-menu nk-menu-main">
-  <li class="nk-menu-item active"><a href="{{ route('app.dashboard') }}" class="nk-menu-link"><span
-              class="nk-menu-text">Dashboard</span></a></li>
-  <li class="nk-menu-item"><a href="{{ route('app.packages.index') }}" class="nk-menu-link"><span
-              class="nk-menu-text">Packages</span></a></li>
-  <li class="nk-menu-item"><a href="{{ route('app.withdrawals.index') }}" class="nk-menu-link"><span
-              class="nk-menu-text">Withdrawals</span></a></li>
-  <li class="nk-menu-item"><a href="{{ route('app.announcements.index') }}" class="nk-menu-link"><span
-              class="nk-menu-text">Announcements
-              @if(announcementCount && announcementCount > 0)
-              <span class="badge badge-primary badge-pill float-right"> {{ announcementCount }}</span>
-              @endif
-            </span></a></li>
-  <li class="nk-menu-item has-sub"><a href="#" class="nk-menu-link nk-menu-toggle"><span
-              class="nk-menu-text">Pages</span></a>
-      <ul class="nk-menu-sub">
-          <li class="nk-menu-item"><a href="{{ route('app.transactions.index') }}" class="nk-menu-link"><span
-                      class="nk-menu-text">Transactions</span></a></li>
-          <li class="nk-menu-item"><a href="{{ route('app.referrals.index') }}" class="nk-menu-link"><span
-                      class="nk-menu-text">Referrals</span></a></li>
-          <li class="nk-menu-item"><a href="{{ route('app.supports.index') }}" class="nk-menu-link"><span
-                      class="nk-menu-text">Support</span></a></li>
-          <li class="nk-menu-item"><a href="{{ route('app.testimonials.get') }}" class="nk-menu-link"><span
-                      class="nk-menu-text">
-                      Testimonial</span></a></li>
-          <li class="nk-menu-item"><a href="{{ route('app.faqs.index') }}" class="nk-menu-link"><span
-                      class="nk-menu-text">FAQ
-                  </span></a></li>
-      </ul>
+<ul class="nk-menu">
+  <li class="nk-menu-item">
+      <a href="{{ route('app.dashboard') }}" class="nk-menu-link">
+          <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+          <span class="nk-menu-text">Dashboard</span>
+      </a>
   </li>
+  <li class="nk-menu-item">
+    <a href="{{ route('app.packages.index') }}" class="nk-menu-link">
+        <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+        <span class="nk-menu-text">Packages</span>
+    </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('app.withdrawals.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Withdrawals</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('app.announcements.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Announcements  </span>
+        @if(announcementCount && announcementCount > 0)
+        <span class="badge badge-primary badge-pill float-right"> {{ announcementCount }}</span>
+        @endif
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('app.transactions.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Transactions</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('app.referrals.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Referrals</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('app.supports.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Support</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('app.testimonials.get') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">Testimonial</span>
+  </a>
+</li>
+<li class="nk-menu-item">
+  <a href="{{ route('app.faqs.index') }}" class="nk-menu-link">
+      <span class="nk-menu-icon"><em class="icon ni ni-dashlite"></em></span>
+      <span class="nk-menu-text">FAQ</span>
+  </a>
+</li>
 </ul>
