--- a/resources/views/templates/main.edge
+++ b/resources/views/templates/main.edge
@@ -5,122 +5,120 @@
     <meta charset="utf-8">
     <meta name="author" content="Softnio">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="/assets/images/favicon.png">
+    <meta name="description" content="@@page-discription">
+    <link rel="shortcut icon" href="/images/favicon.png">
     <title>
-      {{ siteTitle() }} -
-      @!section('title')
+        {{ siteTitle() }} -
+        @!section('title')
     </title>
-    <link rel="stylesheet" href="/assets/css/dashlite.css?ver=1.1.0">
-    <link rel="stylesheet" href="/assets/css/app.theme.css?ver=1.1.0">
-    <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/assets/css/dashlite.css?ver=1.3.0">
+  <link rel="stylesheet" href="/assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="/assets/css/app.theme.css?ver=1.1.0">
+  <link rel="stylesheet" href="/assets/css/custom.css">
   <link href="/assets/css/whatsapp.css" rel="stylesheet" type="text/css">
 </head>
 
-<body class="nk-body bg-lighter npc-invest ">
+<body class="nk-body bg-lighter npc-general has-sidebar ">
     <div class="nk-app-root">
-        <div class="nk-wrap ">
-            <div class="nk-header nk-header-fluid is-dark">
-                <div class="container-xl wide-lg">
-                    <div class="nk-header-wrap">
-                        <div class="nk-menu-trigger mr-sm-2 d-lg-none"><a href="#"
-                                class="nk-nav-toggle nk-quick-nav-icon" data-target="headerNav"><em
-                                    class="icon ni ni-menu"></em></a></div>
-                        <div class="nk-header-brand"><a href="/index.html" class="logo-link"><img
-                                    class="logo-light logo-img" src="/assets/images/logo12.png" srcset="/assets/images/logo12.png 2x"
-                                    alt="logo"><img class="logo-dark logo-img" src="/assets/images/logo12.png"
-                                    srcset="/assets/images/logo12.png 2x" alt="logo-dark"></a></div>
-                        <div class="nk-header-menu" data-content="headerNav">
-                            <div class="nk-header-mobile">
-                                <div class="nk-header-brand"><a href="/index.html" class="logo-link"><img
-                                            class="logo-light logo-img" src="/assets/images/logo.png"
-                                            srcset="/assets/images/logo12.png 2x" alt="logo"><img class="logo12 logo-img"
-                                            src="/assets/images/logo12.png" srcset="/assets/images/logo12.png 2x"
-                                            alt="logo-dark"><span class="nio-version">Invest</span></a></div>
-                                <div class="nk-menu-trigger mr-n2"><a href="#" class="nk-nav-toggle nk-quick-nav-icon"
-                                        data-target="headerNav"><em class="icon ni ni-arrow-left"></em></a></div>
-                            </div>
+        <div class="nk-main ">
+            <div class="nk-sidebar nk-sidebar-fixed is-dark " data-content="sidebarMenu">
+                <div class="nk-sidebar-element nk-sidebar-head">
+                    <div class="nk-sidebar-brand"><a href="/general/index.html" class="logo-link nk-sidebar-logo"><img
+                        class="logo-light logo-img" src="/assets/images/logo12.png" srcset="/assets/images/logo12.png 2x"
+                        alt="logo"><img class="logo-dark logo-img" src="/assets/images/logo12.png"
+                        srcset="/assets/images/logo12.png 2x" alt="logo-dark"></a></div>
+                    <div class="nk-menu-trigger mr-n2"><a href="#" class="nk-nav-toggle nk-quick-nav-icon d-xl-none"
+                            data-target="sidebarMenu"><em class="icon ni ni-arrow-left"></em></a></div>
+                </div>
+                <div class="nk-sidebar-element">
+                    <div class="nk-sidebar-content">
                             @if(auth.user.isUser())
                             @include('includes.app_navigation')
                            @else
                             @include('includes.admin_navigation')
                            @endif
-                        </div>
-                        <div class="nk-header-tools">
-                            <ul class="nk-quick-nav">
-                                <li class="dropdown user-dropdown order-sm-first"><a href="#" class="dropdown-toggle"
-                                        data-toggle="dropdown">
-                                        <div class="user-toggle">
-                                            <div class="user-avatar sm"><em class="icon ni ni-user-alt"></em></div>
-                                            <div class="user-info d-none d-xl-block">
-                                            <div class="user-name dropdown-indicator">{{ auth.user.username }}</div>
-                                            </div>
-                                        </div>
-                                    </a>
-                                    <div
-                                        class="dropdown-menu dropdown-menu-md dropdown-menu-right dropdown-menu-s1 is-light">
-                                        <div class="dropdown-inner user-card-wrap bg-lighter d-none d-md-block">
-                                            <div class="user-card">
-                                                <div class="user-avatar"><span>AB</span></div>
-                                            <div class="user-info"><span class="lead-text">{{ auth.user.getFullName() }}</span><span class="sub-text">{{ auth.user.email }}</span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        @if(auth.user.isUser())
-                                        <div class="dropdown-inner user-account-info">
-                                            <h6 class="overline-title-alt">Account Balance</h6>
-                                            <div class="user-balance">1,494.23 <small
-                                                    class="currency currency-usd">USD</small></div>
-                                            <div class="user-balance-sub">Locked <span>15,495.39 <span
-                                                        class="currency currency-usd">USD</span></span></div><a href="#"
-                                                class="link"><span>Withdraw Balance</span> <em
-                                                    class="icon ni ni-wallet-out"></em></a>
-                                        </div>
-                                        <div class="dropdown-inner">
-                                            <ul class="link-list">
-                                                <li><a href="{{ route('app.account.settings') }}"><em
-                                                            class="icon ni ni-setting-alt"></em><span>Account
-                                                            Setting</span></a></li>
-                                            </ul>
-                                        </div>
-                                        @endif
-                                        <div class="dropdown-inner">
-                                            <ul class="link-list">
-                                                <li><a href="{{ route('logout') }}"><em class="icon ni ni-signout"></em><span>Sign
-                                                            out</span></a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
                     </div>
                 </div>
             </div>
-            <div class="nk-content nk-content-lg nk-content-fluid">
-                <div class="container-xl wide-lg">
-                  @include('includes.alert')
-                  @!section('content')
-                </div>
-            </div>
-            <div class="nk-footer nk-footer-fluid bg-lighter">
-                <div class="container-xl wide-lg">
-                    <div class="nk-footer-wrap">
-                        <div class="nk-footer-copyright"> &copy; {{ currentYear() }}  {{ siteTitle() }}.
+            <div class="nk-wrap ">
+                <div class="nk-header nk-header-fixed is-light">
+                    <div class="container-fluid">
+                        <div class="nk-header-wrap">
+                            <div class="nk-menu-trigger d-xl-none ml-n1"><a href="#"
+                                    class="nk-nav-toggle nk-quick-nav-icon" data-target="sidebarMenu"><em
+                                        class="icon ni ni-menu"></em></a></div>
+                            <div class="nk-header-brand d-xl-none"><a href="/" class="logo-link"><img
+                                        class="logo-light logo-img" src="/assets/images/logo-dark.png"
+                                        srcset="/assets/images/logo-dark.png 2x" alt="logo"><img class="logo-dark logo-img"
+                                        src="/images/logo-dark.png" srcset="/assets/images/logo-dark.png 2x"
+                                        alt="logo-dark"><span class="nio-version">General</span></a></div>
+                            <div class="nk-header-tools">
+                                <ul class="nk-quick-nav">
+                                    <li class="dropdown user-dropdown order-sm-first"><a href="#" class="dropdown-toggle"
+                                            data-toggle="dropdown">
+                                            <div class="user-toggle">
+                                                <div class="user-avatar sm"><em class="icon ni ni-user-alt"></em></div>
+                                                <div class="user-info d-none d-xl-block">
+                                                <div class="user-name dropdown-indicator">{{ auth.user.username }}</div>
+                                                </div>
+                                            </div>
+                                        </a>
+                                        <div
+                                            class="dropdown-menu dropdown-menu-md dropdown-menu-right dropdown-menu-s1 is-light">
+                                            <div class="dropdown-inner user-card-wrap bg-lighter d-none d-md-block">
+                                                <div class="user-card">
+                                                    <div class="user-avatar"><span>AB</span></div>
+                                                <div class="user-info"><span class="lead-text">{{ auth.user.getFullName() }}</span><span class="sub-text">{{ auth.user.email }}</span>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            @if(auth.user.isUser())
+                                            <div class="dropdown-inner user-account-info">
+                                                <h6 class="overline-title-alt">Account Balance</h6>
+                                                <div class="user-balance">1,494.23 <small
+                                                        class="currency currency-usd">USD</small></div>
+                                                <div class="user-balance-sub">Locked <span>15,495.39 <span
+                                                            class="currency currency-usd">USD</span></span></div><a href="#"
+                                                    class="link"><span>Withdraw Balance</span> <em
+                                                        class="icon ni ni-wallet-out"></em></a>
+                                            </div>
+                                            <div class="dropdown-inner">
+                                                <ul class="link-list">
+                                                    <li><a href="{{ route('app.account.settings') }}"><em
+                                                                class="icon ni ni-setting-alt"></em><span>Account
+                                                                Setting</span></a></li>
+                                                </ul>
+                                            </div>
+                                            @endif
+                                            <div class="dropdown-inner">
+                                                <ul class="link-list">
+                                                    <li><a href="{{ route('logout') }}"><em class="icon ni ni-signout"></em><span>Sign
+                                                                out</span></a></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
-                        <div class="nk-footer-links">
-                            <ul class="nav nav-sm">
-                                <li class="nav-item"><a class="nav-link" href="#">Terms</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">Privacy</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">Help</a></li>
-                            </ul>
+                    </div>
+                </div>
+                <div class="nk-content ">
+                    <div class="container-fluid">
+                        <div class="nk-content-inner">
+                            <div class="nk-content-body">
+                                @include('includes.alert')
+                                @!section('content')
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-  <script src="/assets/js/jquery-1.12.4.min.js"></script>
-  <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/jquery-1.12.4.min.js"></script>
+    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/js/custom.js"></script>
 
     @if(auth.user.isUser())
     <script type="text/javascript">
@@ -137,9 +135,8 @@
     @include('includes.whatsapp')
     @endif
   @!section('scripts')
-    <script src="/assets/js/custom.js"></script>
-    {{--  <script src="/assets/js/bundle.min.js"></script>  --}}
-    {{--  <script src="/assets/js/scripts.js"></script>  --}}
+    <!--  <script src="/assets/js/bundle.min.js?ver=1.3.0"></script>
+    <script src="/assets/js/script1.js?ver=1.3.0"></script>  -->
 </body>
 
 </html>
